modules/gdscript/tests/scripts/analyzer/errors/for_loop_wrong_specified_type_with_literal_dictionary.gd
func test():
	for key: int in { "a": 1 }:
		print(key)
